--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unvanquished (0.17.0-1) unstable; urgency=low
+
+  * Release of alpha 17.
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Mon, 08 Jul 2013 02:14:05 +0100
+
 unvanquished (0.16.0-1) unstable; urgency=low
 
   * Release of alpha 16.
